# Habari

./: CMakeLists.txt  README.md
example/: Example.cpp
include/Habari/: Defines.hpp  Flag.hpp  Habari.hpp  MultiFlag.hpp  Parameter.hpp  Parameter.inl
source/Habari/: Habari.cpp
